--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 
   bibtex_show={true},
   abbr={Science},
-  pdf={https://www.science.org/doi/full/10.1126/science.abm3425},=
+  pdf={https://www.science.org/doi/full/10.1126/science.abm3425},
 }
 
 
