--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,19 @@
   pdf={https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkae023/7633881}
 }
 
+@inproceedings{zhang2023towards,
+  title={Towards trustworthy explanation: On causal rationalization},
+  author={Zhang, Wenbo and Wu, Tong and Wang, Yunlong and Cai, Yong and Cai, Hengrui},
+  journal={International Conference on Machine Learning},
+  year={2023},
+  url={https://proceedings.mlr.press/v202/zhang23ap.html},
+
+  bibtex_show={true},
+  abbr={ICML},
+  pdf={https://proceedings.mlr.press/v202/zhang23ap.html}
+
+}
+
 @article{gilbert2022immune,
   title={Immune correlates analysis of the mRNA-1273 COVID-19 vaccine efficacy clinical trial},
   author={Gilbert, Peter B and Montefiori, David C and McDermott, Adrian B and Fong, Youyi and Benkeser, David and Deng, Weiping and Zhou, Honghong and Houchens, Christopher R and Martins, Karen and Jayashankar, Lakshmi and others},
@@ -24,7 +37,7 @@
 
   bibtex_show={true},
   abbr={Science},
-  pdf={https://www.science.org/doi/full/10.1126/science.abm3425},
+  pdf={https://www.science.org/doi/full/10.1126/science.abm3425}
 }
 
 
