--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
 
   bibtex_show={true},
   abbr={JRSSB},
-  pdf={https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkae023/7633881}
+  pdf={https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkae023/7633881},
+  selected={true}
 }
 
 @inproceedings{zhang2023towards,
@@ -24,8 +25,43 @@
 
   bibtex_show={true},
   abbr={ICML},
-  pdf={https://proceedings.mlr.press/v202/zhang23ap.html}
+  pdf={https://proceedings.mlr.press/v202/zhang23ap.html},
+  selected={true}
 
+}
+
+@article{van2023nonparametric,
+  title={Nonparametric estimation of the causal effect of a stochastic threshold-based intervention},
+  author={van der Laan, Lars and Zhang, Wenbo and Gilbert, Peter B},
+  journal={Biometrics},
+  url={https://onlinelibrary.wiley.com/doi/full/10.1111/biom.13690},
+  year={2023},
+
+  bibtex_show={true},
+  abbr={Biometrics},
+  pdf={https://onlinelibrary.wiley.com/doi/full/10.1111/biom.13690}
+}
+
+@inproceedings{fong2023antibody,
+  title={Antibody correlates of protection from severe respiratory syncytial virus disease in a vaccine efficacy trial},
+  author={Fong, Youyi and Huang, Ying and Borate, Bhavesh and van der Laan, Lars WP and Zhang, Wenbo and Carpp, Lindsay N and Cho, Iksung and Glenn, Greg and Fries, Louis and Gottardo, Raphael and others},
+  year={2023},
+  url={https://academic.oup.com/ofid/article/10/1/ofac693/6986211},
+
+  bibtex_show={true},
+  pdf={https://academic.oup.com/ofid/article/10/1/ofac693/6986211}
+}
+
+@article{song2022new,
+  title={A new convolutional neural network architecture for automatic segmentation of overlapping human chromosomes},
+  author={Song, Sifan and Bai, Tianming and Zhao, Yanxin and Zhang, Wenbo and Yang, Chunxiao and Meng, Jia and Ma, Fei and Su, Jionglong},
+  journal={Neural Processing Letters},
+  url={https://link.springer.com/article/10.1007/s11063-021-10629-0},
+  year={2022},
+  
+  bibtex_show={true},
+  abbr={Neural Processing Letters},
+  pdf={https://link.springer.com/article/10.1007/s11063-021-10629-0}
 }
 
 @article{gilbert2022immune,
@@ -39,5 +75,6 @@
   abbr={Science},
   pdf={https://www.science.org/doi/full/10.1126/science.abm3425}
 }
+
 
 
