--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,7 @@
   bibtex_show={true},
   abbr={ICML},
   pdf={https://proceedings.mlr.press/v202/zhang23ap.html},
+  code={https://github.com/onepounchman/Causal-Retionalization},
   selected={true}
 
 }
@@ -42,27 +43,6 @@
   pdf={https://onlinelibrary.wiley.com/doi/full/10.1111/biom.13690}
 }
 
-@inproceedings{fong2023antibody,
-  title={Antibody correlates of protection from severe respiratory syncytial virus disease in a vaccine efficacy trial},
-  author={Fong, Youyi and Huang, Ying and Borate, Bhavesh and van der Laan, Lars WP and Zhang, Wenbo and Carpp, Lindsay N and Cho, Iksung and Glenn, Greg and Fries, Louis and Gottardo, Raphael and others},
-  year={2023},
-  url={https://academic.oup.com/ofid/article/10/1/ofac693/6986211},
-
-  bibtex_show={true},
-  pdf={https://academic.oup.com/ofid/article/10/1/ofac693/6986211}
-}
-
-@article{song2022new,
-  title={A new convolutional neural network architecture for automatic segmentation of overlapping human chromosomes},
-  author={Song, Sifan and Bai, Tianming and Zhao, Yanxin and Zhang, Wenbo and Yang, Chunxiao and Meng, Jia and Ma, Fei and Su, Jionglong},
-  journal={Neural Processing Letters},
-  url={https://link.springer.com/article/10.1007/s11063-021-10629-0},
-  year={2022},
-  
-  bibtex_show={true},
-  abbr={Neural Processing Letters},
-  pdf={https://link.springer.com/article/10.1007/s11063-021-10629-0}
-}
 
 @article{gilbert2022immune,
   title={Immune correlates analysis of the mRNA-1273 COVID-19 vaccine efficacy clinical trial},
