--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
   selected={true}
 }
 
-@inproceedings{zhang2023towards,
+@article{zhang2023towards,
   title={Towards trustworthy explanation: On causal rationalization},
   author={Zhang, Wenbo and Wu, Tong and Wang, Yunlong and Cai, Yong and Cai, Hengrui},
   journal={International Conference on Machine Learning},
