--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,23 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@article{zhang2025where,
+title={Where to Intervene: Action Selection in Deep Reinforcement Learning},
+author={Wenbo Zhang and Hengrui Cai},
+journal={Transactions on Machine Learning Research},
+issn={2835-8856},
+year={2025},
+url={https://openreview.net/forum?id=D3au9XkWuy},
+note={},
+
+bibtex_show={true},
+abbr={TMLR},
+pdf={https://openreview.net/forum?id=D3au9XkWuy},
+selected={true},
+code={https://github.com/onepounchman/RL-Action-Selection},
+}
+
 @article{lila2024interpretable,
   title={Interpretable discriminant analysis for functional data supported on random nonlinear domains with an application to Alzheimer’s disease},
   author={Lila, Eardi and Zhang, Wenbo and Rane Levendovszky, Swati},
