--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,20 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{zhang2025recognizing,
+title={Recognizing Limits: Investigating Infeasibility in Large Language Models},
+author={Wenbo Zhang\textsuperscript{*}, Zihang Xu\textsuperscript{*} and Hengrui Cai},
+journal={Empirical Methods in Natural Language Processing (Findings)},
+year={2025},
+url={https://arxiv.org/abs/2408.05873},
+note={},
+bibtex_show={true},
+abbr={EMNLP},
+pdf={https://arxiv.org/abs/2408.05873},
+selected={false},
+code={https://github.com/Zihang-Xu-2002/Infeasible-Benchmark},
+}
+
 @article{zhang2025where,
 title={Where to Intervene: Action Selection in Deep Reinforcement Learning},
 author={Wenbo Zhang and Hengrui Cai},
