--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 
 @article{zhang2025recognizing,
 title={Recognizing Limits: Investigating Infeasibility in Large Language Models},
-author={Wenbo Zhang*, Zihang Xu* and Hengrui Cai},
+author={Wenbo Zhang* and Zihang Xu* and Hengrui Cai},
 journal={Empirical Methods in Natural Language Processing (Findings)},
 year={2025},
 url={https://arxiv.org/abs/2408.05873},
