--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@ year={2025},
 url={https://arxiv.org/abs/2408.05873},
 note={},
 bibtex_show={true},
-abbr={EMNLP},
+abbr={EMNLP Findings},
 pdf={https://arxiv.org/abs/2408.05873},
 code={https://github.com/Zihang-Xu-2002/Infeasible-Benchmark},
 }
